--- a/main.css
+++ b/main.css
@@ -17,11 +17,12 @@ body {
 }
 #left-drag,
 #right-drag {
-    position: relative !important;
+    position: absolute !important;
     z-index: 999;
     border: 1px solid #f58220;
     cursor: pointer;
     top: 39px;
+    display: none;
 }
 #left-drag:after, #right-drag:after {
     /* background-color: #f58220;
@@ -48,7 +49,6 @@ body {
 }
 #editable-chart {
     position: relative;
-    overflow: hidden;
     width: 100%;
     margin: 0 auto;
     height: 236px;
@@ -328,6 +328,17 @@ tr td:first-child {
     left: -24px;
     border: 2px solid #f58220;
     z-index: 9999;
+    display: none;
+}
+.driverStateSelector {
+    width: 105px;
+    display: inline-block;
+    background-color: #919191;
+    margin-right: 15px;
+    padding: 5px 8px;
+    color: #fff;
+    margin-top: 37px;
+    cursor: pointer;
 }
 
 
