--- a/main.css
+++ b/main.css
@@ -35,17 +35,27 @@ body {
 }
 #left-drag:after {
     content: '';
-    border-top: 18px solid transparent;
+    /* border-top: 18px solid transparent;
     border-bottom: 18px solid transparent;
-    border-right: 18px solid #f58220;
-    right: -1px;
+    border-right: 18px solid #f58220; */
+    border-bottom: 25px solid #f58220;
+    border-left: 16px solid transparent;
+    border-right: 16px solid transparent;
+    height: 0;
+    width: 16px;
+    right: -24px;
 }
 #right-drag:after {
     content: '';
-    border-top: 18px solid transparent;
+    /* border-top: 18px solid transparent;
     border-bottom: 18px solid transparent;
-    border-left: 18px solid #f58220;
-    right: -17px;
+    border-left: 18px solid #f58220; */
+    right: -24px;
+    border-bottom: 25px solid #f58220;
+    border-left: 16px solid transparent;
+    border-right: 16px solid transparent;
+    height: 0;
+    width: 16px;
 }
 #editable-chart {
     position: relative;
